feat: Ajustes esteticos línea grafia actual udistrital/sga_documentacion#428

--- a/src/app/components/asignacion-fechas/asignacion-fechas.component.html
+++ b/src/app/components/asignacion-fechas/asignacion-fechas.component.html
@@ -1,70 +1,99 @@
-<div class="asignacion-fechas" *ngIsGranted="[ROLES.ADMIN_SGA, ROLES.VICERRECTOR, ROLES.ASESOR_VICE, ROLES.COORDINADOR, ROLES.COORDINADOR_PREGADO, ROLES.COORDINADOR_POSGRADO, ROLES.ASISTENTE_ADMISIONES, ROLES.ADMIN_DOCENCIA, ROLES.ASIS_PROYECTO, ROLES.SEC_DECANATURA, ROLES.DECANO]">
-  <h2>{{ "asignacion_fechas.titulo" | translate }}</h2>
-  <div class="nivel-formacion">
-    <label for="nivelFormacion">{{ "asignacion_fechas.seleccionar_nivel_formacion" | translate }}</label>
-    <select id="nivelFormacion" [(ngModel)]="nivelFormacion">
-      <option value="" disabled selected>{{ "asignacion_fechas.seleccionar" | translate }}</option>
-      <option value="pregrado">{{ "asignacion_fechas.pregrado" | translate }}</option>
-      <option value="postgrado">{{ "asignacion_fechas.postgrado" | translate }}</option>
-    </select>
-  </div>
-
-  <div class="procesos-grid">
-    <div class="fila-procesos">
-      <div class="proceso" *ngFor="let proceso of procesos.slice(0, 3)">
-        <h3>{{ proceso.nombre }}</h3>
-        <div class="fechas">
-          <mat-form-field appearance="fill">
-            <mat-label>{{ "asignacion_fechas.seleccionar_fecha_inicio" | translate }}</mat-label>
-            <input matInput [matDatepicker]="pickerInicio" [(ngModel)]="proceso.fechaInicio" (dateChange)="validarFechas(proceso)">
-            <mat-datepicker-toggle matSuffix [for]="pickerInicio"></mat-datepicker-toggle>
-            <mat-datepicker #pickerInicio></mat-datepicker>
-          </mat-form-field>
-        </div>
-        <div class="fechas">
-          <mat-form-field appearance="fill">
-            <mat-label>{{ "asignacion_fechas.seleccionar_fecha_fin" | translate }}</mat-label>
-            <input matInput [matDatepicker]="pickerFin" [(ngModel)]="proceso.fechaFin" [min]="proceso.fechaInicio" (dateChange)="validarFechas(proceso)">
-            <mat-datepicker-toggle matSuffix [for]="pickerFin"></mat-datepicker-toggle>
-            <mat-datepicker #pickerFin></mat-datepicker>
-          </mat-form-field>
-        </div>
-        <div class="selected-dates">
-          <p *ngIf="proceso.fechaInicio">{{ "asignacion_fechas.fecha_inicio_seleccionada" | translate }}: {{ proceso.fechaInicio | date: 'dd/MM/yyyy' }}</p>
-          <p *ngIf="proceso.fechaFin">{{ "asignacion_fechas.fecha_fin_seleccionada" | translate }}: {{ proceso.fechaFin | date: 'dd/MM/yyyy' }}</p>
+<mat-card *ngIsGranted="[ROLES.ADMIN_SGA, ROLES.VICERRECTOR, ROLES.ASESOR_VICE, ROLES.COORDINADOR, ROLES.COORDINADOR_PREGADO, ROLES.COORDINADOR_POSGRADO, ROLES.ASISTENTE_ADMISIONES, ROLES.ADMIN_DOCENCIA, ROLES.ASIS_PROYECTO, ROLES.SEC_DECANATURA, ROLES.DECANO]">
+  <mat-card-header>
+    <mat-card-title>
+      {{ "asignacion_fechas.titulo" | translate }}
+    </mat-card-title>
+    <mat-card-subtitle>
+      {{ "asignacion_fechas.sub_titulo" | translate }}
+    </mat-card-subtitle>
+  </mat-card-header><br>
+  <mat-card-content>
+    <div class="row mt-4">
+      <div class="col-12">
+        <div class="row">
+          <ng-container>
+            <div class="alert info">
+              <mat-icon class="icon">info</mat-icon>
+              <span>{{ 'asignacion_fechas.alerta' | translate }}</span>
+          </div>
+            <mat-form-field class="col-12 w-100" appearance="outline">
+              <mat-label>{{ "asignacion_fechas.seleccionar" | translate }}</mat-label>
+              <mat-icon class="mat-icon-outlined" color="primary" matPrefix>select_all</mat-icon>
+              <mat-select>
+                <mat-option disabled value="">--{{ 'GLOBAL.seleccionar' | translate }}--</mat-option>
+                <mat-option value="pregrado">{{ "asignacion_fechas.pregrado" | translate }}</mat-option>
+                <mat-option value="postgrado">{{ "asignacion_fechas.postgrado" | translate }}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <div class="asignacion-fechas">
+            <div class="procesos-grid">
+              <div class="fila-procesos">
+                <div class="proceso" *ngFor="let proceso of procesos.slice(0, 3)">
+                  <h3>{{ proceso.nombre }}</h3>
+                  <div class="fechas">
+                    <mat-form-field appearance="fill">
+                      <mat-label>{{ "asignacion_fechas.seleccionar_fecha_inicio" | translate }}</mat-label>
+                      <input matInput [matDatepicker]="pickerInicio" [(ngModel)]="proceso.fechaInicio"
+                        (dateChange)="validarFechas(proceso)">
+                      <mat-datepicker-toggle matSuffix [for]="pickerInicio"></mat-datepicker-toggle>
+                      <mat-datepicker #pickerInicio></mat-datepicker>
+                    </mat-form-field>
+                  </div>
+                  <div class="fechas">
+                    <mat-form-field appearance="fill">
+                      <mat-label>{{ "asignacion_fechas.seleccionar_fecha_fin" | translate }}</mat-label>
+                      <input matInput [matDatepicker]="pickerFin" [(ngModel)]="proceso.fechaFin" [min]="proceso.fechaInicio"
+                        (dateChange)="validarFechas(proceso)">
+                      <mat-datepicker-toggle matSuffix [for]="pickerFin"></mat-datepicker-toggle>
+                      <mat-datepicker #pickerFin></mat-datepicker>
+                    </mat-form-field>
+                  </div>
+                  <div class="selected-dates">
+                    <p *ngIf="proceso.fechaInicio">{{ "asignacion_fechas.fecha_inicio_seleccionada" | translate }}: {{
+                      proceso.fechaInicio | date: 'dd/MM/yyyy' }}</p>
+                    <p *ngIf="proceso.fechaFin">{{ "asignacion_fechas.fecha_fin_seleccionada" | translate }}: {{
+                      proceso.fechaFin | date: 'dd/MM/yyyy' }}</p>
+                  </div>
+                </div>
+              </div>      
+              <div class="fila-procesos">
+                <div class="proceso" *ngFor="let proceso of procesos.slice(3)">
+                  <h3>{{ proceso.nombre }}</h3>
+                  <div class="fechas">
+                    <mat-form-field appearance="fill">
+                      <mat-label>{{ "asignacion_fechas.seleccionar_fecha_inicio" | translate }}</mat-label>
+                      <input matInput [matDatepicker]="pickerInicio2" [(ngModel)]="proceso.fechaInicio"
+                        (dateChange)="validarFechas(proceso)">
+                      <mat-datepicker-toggle matSuffix [for]="pickerInicio2"></mat-datepicker-toggle>
+                      <mat-datepicker #pickerInicio2></mat-datepicker>
+                    </mat-form-field>
+                  </div>
+                  <div class="fechas">
+                    <mat-form-field appearance="fill">
+                      <mat-label>{{ "asignacion_fechas.seleccionar_fecha_fin" | translate }}</mat-label>
+                      <input matInput [matDatepicker]="pickerFin2" [(ngModel)]="proceso.fechaFin" [min]="proceso.fechaInicio"
+                        (dateChange)="validarFechas(proceso)">
+                      <mat-datepicker-toggle matSuffix [for]="pickerFin2"></mat-datepicker-toggle>
+                      <mat-datepicker #pickerFin2></mat-datepicker>
+                    </mat-form-field>
+                  </div>
+                  <div class="selected-dates">
+                    <p *ngIf="proceso.fechaInicio">{{ "asignacion_fechas.fecha_inicio_seleccionada" | translate }}: {{
+                      proceso.fechaInicio | date: 'dd/MM/yyyy' }}</p>
+                    <p *ngIf="proceso.fechaFin">{{ "asignacion_fechas.fecha_fin_seleccionada" | translate }}: {{
+                      proceso.fechaFin | date: 'dd/MM/yyyy' }}</p>
+                  </div>
+                </div>
+              </div>
+            </div>      
+            <button class="guardar-btn" (click)="guardar()">
+              <mat-icon>archive</mat-icon>
+              {{ "asignacion_fechas.guardar" | translate }}
+            </button>
+          </div>
+          </ng-container>
         </div>
       </div>
     </div>
-
-    <div class="fila-procesos">
-      <div class="proceso" *ngFor="let proceso of procesos.slice(3)">
-        <h3>{{ proceso.nombre }}</h3>
-        <div class="fechas">
-          <mat-form-field appearance="fill">
-            <mat-label>{{ "asignacion_fechas.seleccionar_fecha_inicio" | translate }}</mat-label>
-            <input matInput [matDatepicker]="pickerInicio2" [(ngModel)]="proceso.fechaInicio" (dateChange)="validarFechas(proceso)">
-            <mat-datepicker-toggle matSuffix [for]="pickerInicio2"></mat-datepicker-toggle>
-            <mat-datepicker #pickerInicio2></mat-datepicker>
-          </mat-form-field>
-        </div>
-        <div class="fechas">
-          <mat-form-field appearance="fill">
-            <mat-label>{{ "asignacion_fechas.seleccionar_fecha_fin" | translate }}</mat-label>
-            <input matInput [matDatepicker]="pickerFin2" [(ngModel)]="proceso.fechaFin" [min]="proceso.fechaInicio" (dateChange)="validarFechas(proceso)">
-            <mat-datepicker-toggle matSuffix [for]="pickerFin2"></mat-datepicker-toggle>
-            <mat-datepicker #pickerFin2></mat-datepicker>
-          </mat-form-field>
-        </div>
-        <div class="selected-dates">
-          <p *ngIf="proceso.fechaInicio">{{ "asignacion_fechas.fecha_inicio_seleccionada" | translate }}: {{ proceso.fechaInicio | date: 'dd/MM/yyyy' }}</p>
-          <p *ngIf="proceso.fechaFin">{{ "asignacion_fechas.fecha_fin_seleccionada" | translate }}: {{ proceso.fechaFin | date: 'dd/MM/yyyy' }}</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <button class="guardar-btn" (click)="guardar()">
-    <mat-icon>archive</mat-icon>
-    {{ "asignacion_fechas.guardar" | translate }}
-  </button>
-</div>
+  </mat-card-content>
+</mat-card>
