--- a/src/app/components/definicion-formularios/definicion-formularios.component.html
+++ b/src/app/components/definicion-formularios/definicion-formularios.component.html
@@ -1,33 +1,77 @@
-<ng-container *ngIsGranted="[ROLES.ADMIN_SGA, ROLES.VICERRECTOR, ROLES.ASESOR_VICE, ROLES.COORDINADOR, ROLES.COORDINADOR_PREGADO, ROLES.COORDINADOR_POSGRADO, ROLES.ASISTENTE_ADMISIONES, ROLES.ADMIN_DOCENCIA, ROLES.ASIS_PROYECTO, ROLES.SEC_DECANATURA, ROLES.DECANO]">
-    <div class="form-container">
-      <h2>{{ "definicion_formularios.titulo" | translate }}</h2>
-      <div class="form-group">
-        <label for="roles">{{ "definicion_formularios.seleccionar_roles" | translate }}</label>
-        <select id="roles" class="form-control">
-          <option value="" disabled selected>{{ "definicion_formularios.seleccione" | translate }}</option>
-          <option value="administradores">{{ "definicion_formularios.administradores" | translate }}</option>
-          <option value="docentes">{{ "definicion_formularios.docentes" | translate }}</option>
-          <option value="estudiantes">{{ "definicion_formularios.estudiantes" | translate }}</option>
-          <option value="concejos_curriculares">{{ "definicion_formularios.concejos_curriculares" | translate }}</option>
-        </select>
-      </div>
-      
-      <div class="form-viewer">
-        {{ "definicion_formularios.visualizador_formulario" | translate }}
-      </div>
-      
-      <div class="form-group">
-        <label for="process">{{ "definicion_formularios.procesos_seleccionar" | translate }}</label>
-        <div class="processes-grid">
-          <div class="process-card" *ngFor="let proceso of procesos" [ngClass]="{ 'selected': selectedProcess === proceso.nombre }" (click)="selectProcess(proceso.nombre)">
-            <mat-icon>{{ proceso.icon }}</mat-icon>
-            <span>{{ proceso.nombre }}</span>
-            <mat-icon *ngIf="selectedProcess === proceso.nombre" class="check-icon">check_circle</mat-icon>
+
+  
+
+
+
+
+
+  <mat-card *ngIsGranted="[ROLES.ADMIN_SGA, ROLES.VICERRECTOR, ROLES.ASESOR_VICE, ROLES.COORDINADOR, ROLES.COORDINADOR_PREGADO, ROLES.COORDINADOR_POSGRADO, ROLES.ASISTENTE_ADMISIONES, ROLES.ADMIN_DOCENCIA, ROLES.ASIS_PROYECTO, ROLES.SEC_DECANATURA, ROLES.DECANO]">
+    <mat-card-header>
+      <mat-card-title>
+        {{ "definicion_formularios.titulo" | translate }}
+      </mat-card-title>
+      <mat-card-subtitle>
+        {{ "definicion_formularios.sub_titulo" | translate }}
+      </mat-card-subtitle>
+    </mat-card-header><br>
+    <mat-card-content>
+      <div class="row mt-4">
+        <div class="col-12">
+          <div class="row">
+            <ng-container>
+              <div class="alert info">
+                <mat-icon class="icon">info</mat-icon>
+                <span>{{ 'definicion_formularios.alerta' | translate }}</span>
+            </div>
+            <mat-card-title>
+              {{ "definicion_formularios.titulo_roles" | translate }}
+            </mat-card-title>
+            <mat-card-subtitle>
+              {{ "definicion_formularios.sub_titulo_roles" | translate }}
+            </mat-card-subtitle><br>
+              <mat-form-field class="col-12 w-100" appearance="outline">
+                <mat-label>{{ "definicion_formularios.seleccione" | translate }}</mat-label>
+                <mat-icon class="mat-icon-outlined" color="primary" matPrefix>select_all</mat-icon>
+                <mat-select id="roles">
+                  <mat-option disabled value="">--{{ 'GLOBAL.seleccionar' | translate }}--</mat-option>
+                  <mat-option value="administradores">{{ "definicion_formularios.administradores" | translate }}</mat-option>
+                  <mat-option value="docentes">{{ "definicion_formularios.docentes" | translate }}</mat-option>
+                  <mat-option value="estudiantes">{{ "definicion_formularios.estudiantes" | translate }}</mat-option>
+                  <mat-option value="docconcejos_curricularesentes">{{ "definicion_formularios.concejos_curriculares" | translate }}</mat-option>          
+                </mat-select>
+              </mat-form-field>
+              <mat-card-title>
+                {{ "definicion_formularios.titulo_visualizador" | translate }}
+              </mat-card-title>
+              <mat-card-subtitle>
+                {{ "definicion_formularios.sub_titulo_visualizador" | translate }}
+              </mat-card-subtitle><br>
+              <div class="form-viewer">
+                {{ "definicion_formularios.visualizador_formulario" | translate }}
+              </div>
+
+              <div class="form-group">
+                <mat-card-title for="process">
+                  {{ "definicion_formularios.procesos_seleccionar" | translate }}
+                </mat-card-title> 
+                <mat-card-subtitle>
+                  {{ "definicion_formularios.sub_titulo_proceso" | translate }}
+                </mat-card-subtitle><br>              
+                <div class="processes-grid">
+                  <div class="process-card" *ngFor="let proceso of procesos" [ngClass]="{ 'selected': selectedProcess === proceso.nombre }" (click)="selectProcess(proceso.nombre)">
+                    <mat-icon>{{ proceso.icon }}</mat-icon>
+                    <span>{{ proceso.nombre }}</span>
+                    <mat-icon *ngIf="selectedProcess === proceso.nombre" class="check-icon">check_circle</mat-icon>
+                  </div>
+                </div>
+              </div>
+              <div class="center-h">
+                <button (click)="guardar()" mat-flat-button color="primary">{{ 'definicion_formularios.guardar' |
+                    translate }}</button>
+            </div>                    
+            </ng-container>
           </div>
         </div>
       </div>
-  
-      <button class="btn btn-primary" (click)="guardar()">{{ "definicion_formularios.guardar" | translate }}</button>
-    </div>
-  </ng-container>
-  
+    </mat-card-content>
+  </mat-card>
