--- a/src/app/components/definicion-formularios/definicion-formularios.component.scss
+++ b/src/app/components/definicion-formularios/definicion-formularios.component.scss
@@ -1,93 +1,120 @@
-@import 'src/assets/styles/palette-angular-material.css';
+.form-container {  
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0.5rem 1rem 0 rgba(44, 51, 73, 0.1);
+  max-width: 500px;
+  margin: auto;
+  text-align: center;  
+  background-color: #ffffff;
+}
 
-.form-container {
-    border: 1px solid var(--md-primary-200);
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    max-width: 500px;
-    margin: auto;
-    text-align: center;
-    background-color: var(--md-primary-50);
-  }
-  
-  h2 {
-    font-size: 1.5em;
-    margin-bottom: 20px;
-    color: var(--md-primary-700);
-  }
-  
-  .form-group {
-    margin-bottom: 20px;
-    text-align: left;
+.form-group {
+  margin-bottom: 20px;
+  text-align: left;
+}
 
-    label {
-      display: block;
-      margin-bottom: 5px;
-      color: var(--md-primary-600);
-    }
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+  color: var(--md-primary-600);
+}
+
+.form-control {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid var(--md-primary-200);
+  border-radius: 4px;
+  background-color: #F0F4F8;
+}
+
+.form-viewer {
+  border: 1px solid #757575;
+  height: 300px;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
   
-    .form-control {
-      width: 100%;
-      padding: 10px;
-      border: 1px solid var(--md-primary-200);
-      border-radius: 4px;
-      background-color: var(--md-primary-50);
-    }
+}
+
+.processes-grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 10px;
+}
+
+@keyframes heartbeat {
+  0% {
+    transform: scale(1);
   }
-  
-  .form-viewer {
-    border: 1px solid var(--md-primary-200);
-    height: 100px;
-    margin-bottom: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--md-primary-50);
-    color: var(--md-primary-700);
+  30% {
+    transform: scale(1.02);
   }
-  
-  .processes-grid {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    gap: 10px;
-  
-    .process-card {
-      border: 1px solid var(--md-primary-200);
-      border-radius: 8px;
-      padding: 10px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      cursor: pointer;
-      transition: border-color 0.3s;
-      background-color: var(--md-primary-50);
-  
-      mat-icon {
-        font-size: 24px;
-        color: var(--md-primary-700);
-      }
-  
-      &.selected {
-        border-color: green;
-        background-color: var(--md-primary-100);
-  
-        .check-icon {
-          color: green;
-        }
-      }
-    }
+  50% {
+    transform: scale(0.98);
   }
-  
-  .btn {
-    padding: 10px 20px;
-    background-color: var(--md-primary-500);
-    color: var(--md-primary-contrast-500);
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  
-    &:hover {
-      background-color: var(--md-primary-700);
-    }
+  70% {
+    transform: scale(1.02);
   }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.process-card {
+  border: 1px solid #757575;
+  border-radius: 4px;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  cursor: pointer;
+  transition: border-color 0.3s, background-color 0.3s;
+}
+
+.process-card:hover {
+  border-color: var(--md-primary-500);
+  background-color: var(--md-primary-50);
+}
+
+.process-card:focus, .process-card.selected {
+  animation: heartbeat 1s ease-in-out;
+}
+
+.process-card mat-icon {
+  font-size: 24px;
+  color: var(--md-primary-700);
+  margin-right: 10px;
+}
+
+.process-card.selected {
+  border-color: var(--md-primary-700);
+  background-color: var(--md-primary-700);
+  color: var(--md-primary-contrast-400);
+}
+
+.process-card.selected mat-icon {
+  font-size: 24px;
+  color: var(--md-primary-contrast-400);
+  margin-right: 10px;
+}
+
+.process-card.selected .check-icon {
+  color: var(--md-primary-contrast-400);
+  margin-left: 10px;
+}
+
+.process-card:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+.mat-mdc-row:hover .mat-mdc-cell {
+  background-color: var(--color100);
+}
+
+.w-100 {
+  width: 50%;
+}
